--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation "io.ktor:ktor-server-servlet:$ktor_version"
     // HTMLをKotlinでレンダリングする
     implementation "io.ktor:ktor-html-builder:$ktor_version"
+    // エラーが出るようにする
+    implementation "ch.qos.logback:logback-classic:1.2.3"
 }
 
 compileKotlin {
