--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,20 @@
+// 先頭に追加
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.3.0'
+    }
+}
+
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
+// 追加
+apply plugin: 'war'
+apply plugin: 'com.google.cloud.tools.appengine'
 
 group 'com.tfandkusu'
 version '1.0-SNAPSHOT'
@@ -34,3 +48,14 @@ compileTestKotlin {
 
 apply plugin: 'application'
 mainClassName = 'io.ktor.server.netty.EngineMain'
+
+// 最後に追加
+// Google App Engineの設定
+appengine {
+    deploy {
+        // バージョン名
+        version = "a1"
+        // GCPのプロジェクトID
+        projectId = System.getenv()['PROJECT_ID']
+    }
+}
