--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,8 @@
 ktor {
     deployment {
         port = 8080
+        // 追加
+        watch = [ main ]
     }
     application {
         // HelloWorldを作ったパッケージ名付きのKotlinソースコード名にKt.mainを付ける
